@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+18-May-2002
+~~~~~~~~~~~
+Iconified windows are shown with their own icon, if they have one.
+
 17-May-2002
 ~~~~~~~~~~~
 Options to set iconification layout policy.
